--- a/index.css
+++ b/index.css
@@ -1,205 +1,241 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
+  box-sizing: border-box;
+  margin: 0;
 }
 
 :root {
-
-    --soft-orange: hsl(35, 77%, 62%);
-    --soft-red: hsl(5, 85%, 63%);
-    --off-white: hsl(36, 100%, 99%);
-    --grayish-blue: hsl(233, 8%, 79%);
-    --dark-grayish-blue: hsl(236, 13%, 42%);
-    --very-dark-blue: hsl(240, 100%, 5%)
+  --soft-orange: hsl(35, 77%, 62%);
+  --soft-red: hsl(5, 85%, 63%);
+  --off-white: hsl(36, 100%, 99%);
+  --grayish-blue: hsl(233, 8%, 79%);
+  --dark-grayish-blue: hsl(236, 13%, 42%);
+  --very-dark-blue: hsl(240, 100%, 5%);
 }
 body {
-    font-family: "Inter", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .container {
-    margin: 0 auto;
-    width: 90%;
-    max-width: 1200px;
-    overflow: hidden;
-    padding-bottom: 60px;
+  margin: 0 auto;
+  width: 90%;
+  max-width: 1200px;
+  overflow: hidden;
+  padding-bottom: 60px;
+  display: grid;
+  grid-template-areas:
+    "nav"
+    "main"
+    "aside"
+    "article";
+  gap: 30px;
 }
 
 /* navbar  */
 
 .nav {
-    height: 80px;
-    display: grid;
-    grid-template-columns: repeat(2, max-content);
-    grid-template-areas: 
-    "logo icon";
-    justify-content: space-between;
-    align-items: center;
+  height: 80px;
+  display: grid;
+  grid-template-columns: repeat(2, max-content);
+  grid-template-areas: "logo icon";
+  justify-content: space-between;
+  align-items: center;
+  grid-area: nav;
 }
 
 .nav_brand {
-    grid-area: logo;
+  grid-area: logo;
 }
 
 .nav__icon {
-    width: 100%;
+  width: 100%;
 }
 .nav__hamburguer {
-    grid-area: icon;
+  grid-area: icon;
 }
 .nav__hamburguer--close {
-    display: none;
+  display: none;
 }
 
 /* main  */
 
 .main {
-    padding: 28px 0;
+  padding: 28px 0;
+  grid-area: main;
 }
 
 .main__bg {
-    width: 100%;
-    height: 300px;
-    background-image: url("./assets/images/image-web-3-mobile.jpg");
-    background-size: cover;
-    background-position: center;
+  width: 100%;
+  height: 300px;
+  background-image: url("./assets/images/image-web-3-mobile.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 .main__texts {
-    margin-top: 20px;
-
+  margin-top: 20px;
 }
 
 .main__paragraph {
-    line-height: 1.5;
-    color: hsl(236, 13%, 42%);
-    /* color: var(--dark-grayish-blue); */
-    margin: 1rem 0;
+  line-height: 1.5;
+  color: hsl(236, 13%, 42%);
+  /* color: var(--dark-grayish-blue); */
+  margin: 1rem 0;
 }
 .main__title {
-    font-size: 2.5rem;
-    color: var(--very-dark-blue);
+  font-size: 2.5rem;
+  color: var(--very-dark-blue);
 }
 
-.main__cta{
-    font-weight: 700;
-    display: inline-block;
-    text-decoration: none;
-    background-color: var(--soft-red);
-    color: white;
-    padding: .9rem 2.5rem;
-    text-transform: uppercase;
-
+.main__cta {
+  font-weight: 700;
+  display: inline-block;
+  text-decoration: none;
+  background-color: var(--soft-red);
+  color: white;
+  padding: 0.9rem 2.5rem;
+  text-transform: uppercase;
 }
 
 /* sidebar  */
 
 .sidebar {
-    padding: 1.5rem;
-    background-color: var(--very-dark-blue);
-    color: white;
+  padding: 1.5rem;
+  background-color: var(--very-dark-blue);
+  color: white;
+  grid-area: aside;
 }
 
 .sidebar__title {
-    font-size: 2rem;
-    color: var(--soft-orange);
-    margin-bottom: 2rem;
+  font-size: 2rem;
+  color: var(--soft-orange);
+  margin-bottom: 2rem;
 }
 
 .sidebar__article {
-    border-bottom: 2px solid var(--dark-grayish-blue);
-    padding-bottom: 1rem;
-    margin-bottom: 1.5rem;
+  border-bottom: 2px solid var(--dark-grayish-blue);
+  padding-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 .sidebar__article:last-of-type {
-    border: none;
-    margin: 0;
+  border: none;
+  margin: 0;
 }
 
 .sidebar__link {
-    display: inline-block;
-    color: white;
-    text-decoration: none;
-    font-size: 1.4rem;
-    font-weight: 700;
-    margin-bottom: .8rem;
+  display: inline-block;
+  color: white;
+  text-decoration: none;
+  font-size: 1.4rem;
+  font-weight: 700;
+  margin-bottom: 0.8rem;
 }
 
 .sidebar__content {
-    line-height: 1.5;
-    color: var(--grayish-blue);
+  line-height: 1.5;
+  color: var(--grayish-blue);
 }
-
-
-
-
 
 /* articles  */
 
 .articles {
-margin: 28px 0;
-display: grid;
-gap: 40px;
-grid-template-columns: repeat(auto-fit, minmax(min(300px, 100%), 1fr));
+  display: grid;
+  gap: 40px;
+  grid-template-columns: repeat(auto-fit, minmax(min(300px, 100%), 1fr));
+  grid-area: article;
 }
 
 .articles__article {
-    display: flex;
-   
+  display: flex;
 }
 
 .articles__figure {
-    width: 40%;
-    max-width: 140px;
-    resize: horizontal;
-    overflow: hidden;
-    aspect-ratio: 3/4;
-    margin-right: 20px;
+  width: 40%;
+  max-width: 140px;
+  resize: horizontal;
+  overflow: hidden;
+  aspect-ratio: 3/4;
+  margin-right: 20px;
 }
 
-
 .articles__img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .articles__texts {
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 10px;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px;
 }
 
 .articles__number {
-    font-size: 2rem;
-    font-weight: 800;
-    color: var(--grayish-blue);
+  font-size: 2rem;
+  font-weight: 800;
+  color: var(--grayish-blue);
 }
 
 .articles__link {
-    text-decoration: none;
-    color: var(--very-dark-blue);
-    font-size: 1.5rem;
-    font-weight: 700;
-    display: inline-block;
+  text-decoration: none;
+  color: var(--very-dark-blue);
+  font-size: 1.5rem;
+  font-weight: 700;
+  display: inline-block;
 }
 
 .articles__content {
-    line-height: 1.5;
-    color: var(--dark-grayish-blue);
+  line-height: 1.5;
+  color: var(--dark-grayish-blue);
 }
 
-@media (min-width: 764px){
-/* 
-    .container {
-        display: grid;
-        grid-auto-columns: 1fr;
-        grid-template-areas:
-"nav nav nav nav nav"
-"main main main sidebar sidebar"
-"article article article article article"
+@media (min-width: 764px) {
+  .container {
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-template-areas:
+      "nav nav nav nav nav"
+      "main main main aside aside"
+      "article article article article article";
+  }
 
-    } */
+  .main__texts {
+    display: grid;
+    grid-template-areas:
+      "title p"
+      "title a";
+    /* grid-template-columns: 1/2;
+grid-template-rows: 1/3; */
+  }
+
+  .main__title {
+    grid-area: title;
+    /* grid-template-columns: 1/2;
+    grid-template-rows: 1/3; */
+    align-self: center;
+    font-size: 3.5rem;
+  }
+
+  .main__paragraph {
+    grid-area: p;
+    /* grid-template-columns: 2/3;
+    grid-template-rows: 1/2; */
+    align-self: start;
+  }
+
+  .main__cta {
+    grid-area: a;
+    /* grid-template-columns: 2/3;
+grid-template-rows: 2/3; */
+    align-self: end;
+    text-align: center;
+    margin: 0;
+  }
+
+  .main {
+    display: grid;
+    grid-template-rows: max-content 1fr;
+  }
 }
