--- a/index.css
+++ b/index.css
@@ -49,11 +49,35 @@ body {
 .nav__icon {
   width: 100%;
 }
+
 .nav__hamburguer {
   grid-area: icon;
+  z-index: 10;
 }
+
 .nav__hamburguer--close {
   display: none;
+}
+
+.nav__menu {
+    opacity: 0;
+  position: absolute;
+  background-color: white;
+  display: grid;
+  place-content: center;
+  inset: 0;
+  list-style: none;
+  padding: 0;
+  gap: 1rem;
+}
+
+.nav__item {
+    text-align: center;
+}
+
+.nav__link {
+    text-decoration: none;
+    color: var(--very-dark-blue);
 }
 
 /* main  */
@@ -237,5 +261,9 @@ grid-template-rows: 2/3; */
   .main {
     display: grid;
     grid-template-rows: max-content 1fr;
+  }
+
+  .main__bg {
+    background-image: url("./assets/images/image-web-3-desktop.jpg");
   }
 }
