--- a/index.css
+++ b/index.css
@@ -120,8 +120,7 @@ body {
 
 .main__paragraph {
   line-height: 1.5;
-  color: hsl(236, 13%, 42%);
-  /* color: var(--dark-grayish-blue); */
+  color: var(--dark-grayish-blue);
   margin: 1rem 0;
 }
 .main__title {
@@ -130,12 +129,12 @@ body {
 }
 
 .main__cta {
+  padding: 0.9rem 2.5rem;
   font-weight: 700;
   display: inline-block;
   text-decoration: none;
   background-color: var(--soft-red);
   color: white;
-  padding: 0.9rem 2.5rem;
   text-transform: uppercase;
 }
 
@@ -143,35 +142,35 @@ body {
 
 .sidebar {
   padding: 1.5rem;
+  grid-area: aside;
   background-color: var(--very-dark-blue);
   color: white;
-  grid-area: aside;
 }
 
 .sidebar__title {
+  margin-bottom: 2rem;
   font-size: 2rem;
   color: var(--soft-orange);
-  margin-bottom: 2rem;
 }
 
 .sidebar__article {
+  margin-bottom: 1.5rem;
   border-bottom: 2px solid var(--dark-grayish-blue);
   padding-bottom: 1rem;
-  margin-bottom: 1.5rem;
 }
 
 .sidebar__article:last-of-type {
-  border: none;
   margin: 0;
+  border: none;
 }
 
 .sidebar__link {
+  margin-bottom: 0.8rem;
   display: inline-block;
   color: white;
   text-decoration: none;
   font-size: 1.4rem;
   font-weight: 700;
-  margin-bottom: 0.8rem;
 }
 
 .sidebar__content {
@@ -195,10 +194,10 @@ body {
 .articles__figure {
   width: 40%;
   max-width: 140px;
+  margin-right: 20px;
+  aspect-ratio: 3/4;
   resize: horizontal;
   overflow: hidden;
-  aspect-ratio: 3/4;
-  margin-right: 20px;
 }
 
 .articles__img {
@@ -208,11 +207,11 @@ body {
 }
 
 .articles__texts {
-  width: 60%;
+  padding: 10px;
   display: flex;
+  width: 60%;
   flex-direction: column;
   justify-content: space-between;
-  padding: 10px;
 }
 
 .articles__number {
@@ -222,11 +221,11 @@ body {
 }
 
 .articles__link {
+  display: inline-block;
   text-decoration: none;
   color: var(--very-dark-blue);
   font-size: 1.5rem;
   font-weight: 700;
-  display: inline-block;
 }
 
 .articles__content {
@@ -245,36 +244,26 @@ body {
   }
 
   .main__texts {
-    display: grid;
-    grid-template-areas:
-      "title p"
-      "title a";
-    /* grid-template-columns: 1/2;
-grid-template-rows: 1/3; */
+    display: flex;
+    gap: 20px;
   }
 
   .main__title {
     grid-area: title;
-    /* grid-template-columns: 1/2;
-    grid-template-rows: 1/3; */
     align-self: center;
     font-size: 3.5rem;
   }
 
   .main__paragraph {
     grid-area: p;
-    /* grid-template-columns: 2/3;
-    grid-template-rows: 1/2; */
     align-self: start;
   }
 
   .main__cta {
+    margin: 0;
     grid-area: a;
-    /* grid-template-columns: 2/3;
-grid-template-rows: 2/3; */
     align-self: end;
     text-align: center;
-    margin: 0;
   }
 
   .main {
